--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -8,10 +8,19 @@
     height: 60px;
     border-radius: 50%;
     background-color: $lightColor;
+    background-repeat: no-repeat;
+    background-position: center;
     transition: all 0.3s ease-in;
     &:hover {
         background-color: $btnColor;
     }
+    &--menu {
+        background-image: url(./../img/icons/menu.svg);
+    }
+    &--search {
+        background-image: url(./../img/icons/search.svg);
+    }
+
 }
 
 //======= Main Buttons =========================
