--- a/scss/pages/_main.scss
+++ b/scss/pages/_main.scss
@@ -40,6 +40,7 @@
         margin-bottom: 40px;
         font-weight: 500;
         font-size: 22px;
+        letter-spacing: normal;
         text-transform: inherit;
         color: $lightColor;
         span {
