--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,10 +1,9 @@
 .header {
     position: relative;
-    height: 870px;
+    padding: 60px 0 100px;
     background-image: url("./../img/bg/header-bg.jpg");
     @include bgOverlay();
     &__buttons {
-        padding-top: 60px;
         @include flex();
     }
     &__description {
@@ -15,15 +14,13 @@
         margin-top: 40px;
         max-width: 730px;
         font-size: 20px;
-        line-height: 1.2;
+        line-height: auto;
         text-align: center;
         color: $lightColor;
     }
     &__scroll {
-        position: absolute;
-        bottom: 100px;
-        left: 50%;
-        transform: translateX(-50%);
+        margin-top: 148px;
+        @include flex($jc: center);
     }
 }
 
@@ -31,17 +28,48 @@
 /* tablet */
 
 @media (max-width: 1199px) {
-
+    .header {
+        padding: 60px 0 50px;
+        &__description {
+            margin-top: 100px;
+        }
+        &__text {
+            margin-top: 35px;
+            font-size: 18px;
+        }
+        &__scroll {
+            margin-top: 129px;
+        }
+    }
 }
 
 /* Mobile */
 
 @media (max-width: 899px) {
-
+    .header {
+        padding: 20px 0 50px;
+        &__description {
+            margin-top: 30px;
+        }
+        &__text {
+            margin-top: 30px;
+            max-width: 430px;
+            font-size: 16px;
+        }
+        &__scroll {
+            margin-top: 80px;
+        }
+    }
 }
 
 /* Mobile XS*/
 
 @media (max-width: 599px) {
-
+    .header {
+        padding: 20px 0 40px;
+        background-image: url("./../img/bg/header-bg-600.jpg");
+        &__scroll {
+            margin-top: 50px;
+        }
+    }
 }
