--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -13,7 +13,7 @@
 }
 
 .nav {
-    margin-right: 40px;
+    margin-right: 50px;
     & > * + * {
         margin-left: 50px;
     }
@@ -76,17 +76,56 @@
 /* tablet */
 
 @media (max-width: 1199px) {
-
+    .footer {
+        padding: 60px 0;
+        &__row {
+            margin-bottom: 40px;
+        }
+    }
 }
 
 /* Mobile */
 
 @media (max-width: 899px) {
+    .footer {
+        padding: 50px 0;
+        &__row {
+            flex-direction: column;
+            margin-bottom: 30px;
+        }
+    }
 
+    .nav {
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
 }
 
 /* Mobile XS*/
 
 @media (max-width: 599px) {
+    .footer {
+        padding: 40px 0;
+        &__row {
+            margin-bottom: 40px;
+        }
+        &__copyright p {
+            line-height: 1.5;
+        }
+    }
 
+    .nav {
+        margin-bottom: 40px;
+        @include flex($fdir: column);
+        & > * + * {
+            margin-left: 0;
+            margin-top: 20px;
+        }
+    }
+
+    .socials {
+        & > * + * {
+            margin-left: 20px;
+        }
+    }
 }
