--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -54,7 +54,9 @@
         &__text {
             margin-top: 30px;
             max-width: 430px;
-            font-size: 16px;
+            font-weight: bold;
+            font-size: 20px;
+            line-height: 24px;
         }
         &__scroll {
             margin-top: 80px;
