--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,7 +7,8 @@ button {
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     font-size: 14px;
-    letter-spacing: 4px;
+    line-height: 17px;
+    letter-spacing: 6px;
     color: $lightColor;
     transition: all 0.3s ease-in;
 }
