--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -17,6 +17,7 @@ h1 {
 .title {        //H2
     font-weight: 700;
     font-size: 16px;
+    line-height: 100%;
     letter-spacing: 4px;
     text-transform: uppercase;
     color: $sectionNameColor;
@@ -29,6 +30,7 @@ h1 {
 .subtitle {     //H3
     font-weight: 700;
     font-size: 48px;
+    line-height: 100%;
     color: $titleColor;
     /* Tablet */
     @media (max-width: 1199px) {
@@ -53,6 +55,6 @@ h4 {
 p {
     font-weight: 500;
     font-size: 14px;
-    line-height: 2.14;
+    // line-height: 2.14;
     color: $textColor;
 }
