--- a/scss/pages/_main.scss
+++ b/scss/pages/_main.scss
@@ -17,7 +17,7 @@
 .card {
     max-width: 270px;
     text-align: center;
-    &__img {
+    &__img img {
         margin: 0 auto;
     }
     &__title {
@@ -25,6 +25,7 @@
     }
     &__text {
         margin-top: 20px;
+        line-height: 2.14;
     }
 }
 
@@ -104,6 +105,7 @@
         margin-bottom: 40px;
         font-weight: 500;
         font-size: 22px;
+        line-height: 100%;
         letter-spacing: normal;
         text-transform: inherit;
         color: $lightColor;
@@ -149,16 +151,18 @@
     border-bottom: 1px solid #E1E1E1;
     &__row {
         padding: 0 114px 0 100px;
-        @include flex();
+        @include flex($ai: start);
     }
     &__content {
+        margin-top: 152px;
         max-width: 570px;
     }
     .subtitle {
-        margin: 30px 0;
+        margin: 28px 0 30px;
     }
     &__text {
         max-width: 400px;
+        line-height: 2.2;
         p {
             margin-bottom: 15px;
         }
@@ -206,7 +210,7 @@
     .tasks {
         padding: 40px 0;
         &__row {
-            flex-direction: column-reverse;
+            @include flex($fdir: column-reverse);
         }
         &__content {
             max-width: 100%;
@@ -241,6 +245,7 @@
     }
     &__text {
         max-width: 400px;
+        line-height: 2.2;
         p {
             margin-bottom: 15px;
         }
@@ -292,7 +297,7 @@
 /* Mobile XS */
 @media (max-width: 599px) {
     .focus {
-        padding: 0 0 40px;
+        padding: 40px 0;
         &__row {
             flex-direction: column;
             align-items: center;
@@ -308,6 +313,7 @@
         }
         &__content {
             width: 100%;
+            @include flex($fdir: column)
         }
     }
 }
@@ -357,6 +363,7 @@
         }
         .package__price {
             font-size: 80px;
+            line-height: 100%;
             margin-bottom: 15px;
         }
         .period {
@@ -365,11 +372,14 @@
             background: rgba(255, 255, 255, 0.1);
             border-radius: 30px;
             font-size: 12px;
+            line-height: 100%;
+            letter-spacing: 4px;
         }
     }
 
     &__list {
         padding: 40px 0 58px;
+        line-height: 100%;
         li:not(:last-child) {
             margin-bottom: 25px;
         }
